--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Order Meals</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_MyFood">My Order</string>
+    <string name="menu_foodCat">Food Category</string>
+    <string name="menu_logout">Logout</string>
 </resources>
