--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
-    <string name="app_name">OrderFood</string>
+    <string name="app_name">Order Food</string>
     <string name="title_activity_home">HomeActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
@@ -12,4 +10,11 @@
     <string name="menu_MyFood">My Order</string>
     <string name="menu_foodCat">Food Category</string>
     <string name="menu_logout">Logout</string>
+    <string name="title_activity_food_list">FoodListActivity</string>
+    <string name="title_activity_food">FoodActivity</string>
+    <string name="title_activity_list_food">ListFoodActivity</string>
+    <string name="title_activity_main2">MainActivity2</string>
+    <string name="tab_text_1">All Food</string>
+    <string name="tab_text_2">Lunch</string>
+    <string name="tab_text_3">Breakfast</string>
 </resources>
